--- a/css/style.css
+++ b/css/style.css
@@ -1,104 +1,145 @@
-/* :root {
-    --bg_main: #0a1f44;
-    --text_light: #fff;
-    --text_med: #53627c;
-    --text_dark: #1e2432;
-    --red: #ff1e42;
-    --darkred: #c3112d;
-    --orange: #ff8c00;
-  }
-   
-  * {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-weight: normal;
-  }
-   
-  button {
-    cursor: pointer;
-  }
-    
-  input {
-    -webkit-appearance: none;
-  }
-    
-  button,
-  input {
-    /* border: none; */
-    /* background: none; */
-    /* outline: none; */
-    /* color: inherit;
-  }
-   
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-   
-  ul {
-    list-style: none;
-  }
-   
-  body {
-    font: 1rem/1.3 "Roboto", sans-serif;
-    background: var(--bg_main);
-    color: var(--text_dark);
-    padding: 50px;
-  }
+    background-color: #f1f1f1;
+  } */
 
-  .top-banner {
-    color: var(--text_light);
-  }
-   
-  .heading {
-    font-weight: bold;
-    font-size: 4rem;
-    letter-spacing: 0.02em;
-    padding: 0 0 30px 0;
-  }
-   
-  .top-banner form {
+
+.header {
+  font-weight: bold;
+  font-size: 1.75rem;
+  letter-spacing: 0.02em;
+  /* padding: 0 0 30px 0; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #c8c9d4;
+  background-color: #0a1f44;
+  margin-bottom: 30px;
+  border-radius: 25px;
+
+}
+
+input {
+  font-family: "Roboto", sans-serif;
+  color: #0a1f44;
+  background: #f1f1f1;
+  border-radius: 25px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+/* #form {
     position: relative;
     display: flex;
     align-items: center;
-  }
-   
-  .top-banner form input {
-    font-size: 2rem;
-    height: 40px;
-    padding: 5px 5px 10px;
-    border-bottom: 1px solid;
-  }
-   
-  .top-banner form input::placeholder {
-    color: currentColor; 
-  }
-   
-  .top-banner form button {
-    font-size: 1rem;
-    font-weight: bold;
-    letter-spacing: 0.1em;
-    padding: 15px 20px;
-    margin-left: 15px;
-    border-radius: 5px;
-    background: var(--red);
-    transition: background 0.3s ease-in-out;
-  }
-   
-  .top-banner form button:hover {
-    background: var(--darkred);
-  }
-   
-  .top-banner form .msg {
-    position: absolute;
-    bottom: -40px;
-    left: 0;
-    max-width: 450px;
-    min-height: 40px;
-  }
-   
+  } */
+
+#search {
+  font-family: "Roboto", sans-serif;
+  color: #f1f1f1;
+  background: #0a1f44;
+  border-radius: 25px;
+  margin-left: 2px;
+  padding: 5px;
+
+
+}
+
+body {
+  font: 1rem/1.3 "Roboto", sans-serif;
+  background-image: url(./img/wallpaperflare.com_wallpaper.jpg);
+
+}
+
+#current {
+  font-family: "Roboto", sans-serif;
+  color: #f1f1f1;
+  background: #0a1f44;
+  border-radius: 25px;
+  padding: 5px;
+  max-width: 400px;
+  max-height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.grid-container {
+  display: inline-grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+#temperature1, #temperature2, #temperature3, #temperature4, #temperature5 {
+  text-align: center;
+}
+
+#city {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+#temperature {
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+/* .fiveday1 {
+  background-color: #0a1f44;
+  display: flex;
+  margin-right: 15px;
+  max-width: 150px;
+  align-items: center;
+  text-align: center;
+}
+
+.fiveday2 {
+  background-color: #0a1f44;
+  display: flex;
+  
+}
+
+.fiveday3 {
+  background-color: #0a1f44;
+  display: flex;
+  
+}
+
+.fiveday4 {
+  background-color: #0a1f44;
+  display: flex;
+  
+}
+
+.fiveday5{
+  background-color: #0a1f44;
+  display: flex;
+  
+}
+
+ul {
+  list-style: none;
+} */
+
+
+
+
+/*    
   @media screen and (max-width: 700px) {
     .top-banner form {
       flex-direction: column;
@@ -119,5 +160,4 @@
       min-height: 0;
       margin-top: 10px;
     }
-  }
-
+  } */
